[package]
name = "mysticeti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
parking_lot = "0.12.1"
tracing = "0.1.37"

[dev-dependencies]
tracing-test = "0.2.4"

[features]
simulator = []


