[package]
name = "mysticeti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
parking_lot = "0.12.1"
tracing = "0.1.37"
prometheus = "0.13.3"
axum = "0.6.18"
hyper = "0.14.26"
clap = { version = "4.3.3", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
serde_yaml = "0.9.21"
memmap2 = "0.7.0"
minibytes = {path="../minibytes", default_features=false, features=["frommmap"]}
libc = "0.2.146"
crc = "3.0.1"

[dev-dependencies]
tracing-test = "0.2.4"
tempdir = "0.3.7"
reqwest = { version = "0.11.18", features = ["json"] }

[features]
simulator = []


