[package]
name = "mysticeti-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true } # todo - move to dev-dep

rand = "0.8.5"
bincode = "1.3.3"
parking_lot = "0.12.1"
prometheus = "0.13.3"
axum = "0.6.18"
hyper = "0.14.26"
serde_yaml = "0.9.21"
memmap2 = "0.7.0"
libc = "0.2.146"
tracing-subscriber = "0.3.17"
tracing-core = "0.1.31"

minibytes = { path = "../third-party/minibytes", default_features = false, features = ["frommmap"] }

blake2 = "0.10.6"
digest = "0.10.6"
hex = "0.4.3"
ed25519-consensus = "2.1.0"
zeroize = "1.6.0"
tabled = "0.12.2"
gettid = "0.1.2"
crc32fast = "1.3.2"

[dev-dependencies]
reqwest = { workspace = true }
tracing-test = "0.2.4"
tempdir = "0.3.7"
seahash = "4.1.0"

[features]
simulator = []