[package]
name = "mysticeti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

mysticeti-core = { path = "../mysticeti-core" }

